$Id: NEWS,v 1.878 2008-01-02 23:16:48 castaglia Exp $

-----------------------------------------------------------------------------
  More details on the bugs listed below can be found by using the bug number
  indicated in the following URL:

    http://bugs.proftpd.org/show_bug.cgi?id=N

  where `N' is the bug number.
-----------------------------------------------------------------------------

CVS
--------------------------------
- Bug 2978 - Support more verbose OpenSSL diagnostic logging.  There is now
  support for an "EnableDiags" TLSOptions setting, which logs a lot of
  SSL/TLS protocol information to the TLSLog.
- Bug 2969 - Allow APPE after REST.
- Bug 2983 - Use getgrouplist(3) for group lookup, if available.  This may
  potentially speed up the group membership lookup on some systems.
- Bug 2984 - mod_auth_file uid2name() does not cache results causing slow LIST
  response.
- Bug 2925 - Add caching of IP address and DNS name lookups.  This may help
  speed up data transfers, especially rapid-fire data transfers as used by
  "download accelerators".
- Bug 2979 - Ability to ban clients which connect too often.  The mod_ban
  module now supports a "ClientConnectRate" BanOnEvent rule.
- Bug 2987 - Verbose ban information (i.e. 'ftpdctl ban info -v') not working
  on FreeBSD.
- Bug 2986 - Authoritative PAM is not honored.
- Bug 2988 - mod_wrap2_file ignores "ALL" keyword.
- Bug 2982 - Support limit on number of simultaneous file transfers from one
  client.  Two new configuration directives, MaxTransfersPerHost and
  MaxTransfersPerUser, have been added.
- Bug 2386 - Controls should use kernel-enforced credentials where possible.
- Added mod_dynmasq contrib module.  See doc/contrib/mod_dynmasq.html for
  more information.
- Bug 2968 - Ability to allow protection on control channel, but reject
  protection on data channel.  See doc/contrib/mod_tls.html#TLSRequired
  for details.
- Added mod_unique_id contrib module.  See doc/contrib/mod_unique_id.html