@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.878 2008-01-02 23:16:48 castaglia Exp $
+$Id: NEWS,v 1.879 2008-01-03 01:39:33 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -84,6 +84,7 @@ CVS
 - Bug 2731 - Add ability to set process priority for file transfers.  A new
   TransferPriority directive has been added, which can be used to set the
   scheduling priority of the session process during file transfers.
+- Bug 3020 - Server replies to NLST with 450 at the wrong time.
 
 1.3.1 - Released 5-Oct-2007
 --------------------------------
